# C-_GUI_Programming_with_Qt_4

./: README.md
1_Getting_Started/HelloQt/: CMakeLists.txt  main.cpp
1_Getting_Started/QuitButton/: CMakeLists.txt  main.cpp
1_Getting_Started/Slider/: CMakeLists.txt  main.cpp
1_Getting_Started/build-QuitButton-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
1_Getting_Started/build-Slider-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
1_Getting_Started/buildHelloQt/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
2_Creating_Dialogs/ExtensionDialog/: CMakeLists.txt  main.cpp  sortdialog.cpp  sortdialog.h  sortdialog.ui
2_Creating_Dialogs/FindDialog/: CMakeLists.txt  finddialog.cpp  finddialog.h  finddialog.ui  main.cpp
2_Creating_Dialogs/GoToCell/: CMakeLists.txt  gotocelldialog.cpp  main.cpp
2_Creating_Dialogs/build-ExtensionDialog-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
2_Creating_Dialogs/build-FindDialog-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
2_Creating_Dialogs/build-GoToCell-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
3_Creating_Main_Windows/Spreadsheet/: CMakeLists.txt  cell.cpp  cell.h  finddialog.cpp  finddialog.h  gotocelldialog.h  gotocelldialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  project.pro  sortdialog.cpp  sortdialog.h  sortdialog.ui  spreadsheet.cpp  spreadsheet.h  spreadsheet.qrc
3_Creating_Main_Windows/build-Spreadsheet-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
4_Creating_Custom_Widgets/HexSpinBox/: CMakeLists.txt  hexspinbox.h
4_Creating_Custom_Widgets/build-HexSpinBox-Desktop_Qt_6_6_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
5_Creating_Custom_Widgets/HexSpinBox/: CMakeLists.txt  hexspinbox.cpp  hexspinbox.h  main.cpp
5_Creating_Custom_Widgets/IconEditor/: CMakeLists.txt  main.cpp  (+2 more)
(+905 files in other folders)
